[package]
name = "crustyOS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
target = "thumbv7em-none-eabihf"
[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"#because mutex isnt available in no_std we use spinlock mutex 

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

